--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -18,7 +18,8 @@
 }
 
 .contact-list li {
-    margin-bottom: 40px;
+    margin-bottom: 20px;
+    padding-top: 60px;
 }
 
 .contact-list h3 {
@@ -40,6 +41,7 @@
 
 .contact-list a {
     color: var(--third-color);
+    
 }
 
 .contact-right {
@@ -94,7 +96,7 @@
 }
 
 .second-row input {
-    width: 48%;
+    width: 100%;
 }
 
 .contact-btn {
