--- a/src/components/sectionTitle/SectionTitle.css
+++ b/src/components/sectionTitle/SectionTitle.css
@@ -2,7 +2,7 @@
     font-size: 60px;
     font-weight: 800;
     margin-bottom: 20px;
-    background: linear-gradient(to top, transparent 0%, var(--third-color) 70%);
+    background: linear-gradient(to top, transparent 0%, var(--third-color) 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     opacity: .1;
@@ -18,7 +18,7 @@
 .inner-second-title::before {
     content: "";
     position: absolute;
-    width: 70px;
+    width: 100%;
     height: 5px;
     right: 0;
     bottom: 0;
