--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1,6 +1,8 @@
 .home {
     padding: 80px 0;
     min-height: 100vh;
+    position: relative;
+    overflow: hidden;
 }
 
 .home-wrapper {
@@ -8,6 +10,8 @@
     justify-content: space-between;
     align-items: center;
     gap: 60px;
+    position: relative;
+    z-index: 1;
 }
 
 .media-icons {
