--- a/src/components/portfolio/Portfolio.css
+++ b/src/components/portfolio/Portfolio.css
@@ -39,7 +39,7 @@
     bottom: 0;
     left: 0;
     margin: 20px;
-    color: #fff;
+    color: #6a59d1;
     opacity: 0;
     transform: translateY(-20px);
     transition: .5s linear;
