--- a/src/components/home/StarsBackground.css
+++ b/src/components/home/StarsBackground.css
@@ -1,4 +1,4 @@
-.stars-background {
+/* .stars-background {
     position: absolute;
     top: 0;
     left: 0;
@@ -8,4 +8,4 @@
     pointer-events: none;
     background: transparent;
 }
-
+ */
